Lights Off 40.beta
==================

* Updated translations
* Rework UI to work better on smaller screens (Arnaud Bonatti)

Lights Off 40.alpha
==================

* Updated translations
* Code cleanup and modernization (Arnaud Bonatti)

Lights Off 3.38.0
==================

* Updated translations

Lights Off 3.37.90
==================

* Updated translations
* Updated help
* Updated build
* Switch to GTK mode by default (Robert Roth)

Lights Off 3.36.0
==================

* Updated translations
* Updated help

Lights Off 3.35.90
==================

* Updated translations
* Updated help

Lights Off 3.34.0
==================

* Updated translations

Lights Off 3.33.92
==================

* Updated translations

Lights Off 3.32.0
==================

* Updated translations

Lights Off 3.31.92
==================

* Updated translations

Lights Off 3.31.91
==================

* Snap build fixes (Jeremy Bicha)
* Updated translations

Lights Off 3.31.90
==================

* Snap build fixes (Jeremy Bicha)
* Unify application identifier !5 (Bilal Elmoussaoui)
* Added tests to validate appdata and desktop !5 (Bilal Elmoussaoui)
* Updated appdata !5 (Bilal Elmoussaoui)
* Added flatpak nightly builds !6 (Bilal Elmoussaoui)
* Updated translations

Lights Off 3.31.3
==================

* Reduced border and minimum size to fit Librem5
* Code cleanup
* Updated translations

Lights Off 3.31.1
==================

* Removed appmenu (#8)
* Updated translations

Lights Off 3.30.0
==================

* Updated translations

Lights Off 3.29.90
==================

* Updated translations
* Added experimental clutter-less mode

Lights Off 3.29.3
==================

* Updated translations
* Drop autotools
* Update bugzilla references to gitlab

Lights Off 3.28.0
==================

* Updated translations

Lights Off 3.27.92
==================

* Fixed appdata installation
* Updated translations

Lights Off 3.27.90
==================

* Translations cleanup
* Added snap packaging