@@ -64,6 +64,14 @@
     <content_attribute id="money-gambling">none</content_attribute>
   </content_rating>
   <releases>
+    <release version="40.rc" date="2021-03-12" type="development">
+      <description>
+        <p>Overview of changes in lightsoff 40.rc</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="40.beta" date="2021-02-05" type="development">
       <description>
         <p>Overview of changes in lightsoff 40.beta</p>
