@@ -1,3 +1,8 @@
+Lights Off 40.rc
+==================
+
+* Updated translations
+
 Lights Off 40.beta
 ==================
 
